// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Table Alignment 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-1sa3un9=""
    role="grid"
  >
    <thead
      data-css-1decmr1=""
    >
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Align Left
          </div>
        </th>
        <th
          data-css-1o6l4fn=""
          role="columnheader"
          scope="col"
        >
          <div>
            Align center
          </div>
        </th>
        <th
          data-css-8x8fga=""
          role="columnheader"
          scope="col"
        >
          <div>
            Align right
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Delmer
          </div>
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          Schaefer
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Mathilde2@hotmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Liliane
          </div>
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          Heaney
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Fabian_Reichel@gmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Noemy
          </div>
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          Baumbach
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Jerrell.Hackett@hotmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Alexandrea
          </div>
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          Haley
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Wilson.Jakubowski@gmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Constance
          </div>
        </th>
        <td
          data-css-rg0vl=""
          role="gridcell"
        >
          Kutch
        </td>
        <td
          data-css-486wol=""
          role="gridcell"
        >
          Coy87@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Basic 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-1sa3un9=""
    role="grid"
  >
    <thead
      data-css-1decmr1=""
    >
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Jorge
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          O'Connell
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Silas.Will@gmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Enrico
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          VonRueden
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Helen_Schmeler@yahoo.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Brittany
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Leuschke
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Yasmeen49@hotmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Eva
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Jacobs
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Birdie0@hotmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            Erich
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Dach
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Hubert_Welch@yahoo.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Mixed Content 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-1sa3un9=""
    role="grid"
  >
    <thead
      data-css-1decmr1=""
    >
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Baron"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#7048C6",
                    }
                  }
                >
                  B
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Baron
              </span>
            </div>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Beer
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Derrick_Raynor@yahoo.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Ignacio"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#D1487B",
                    }
                  }
                >
                  I
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Ignacio
              </span>
            </div>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Swift
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Hans.Marquardt@yahoo.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Edwina"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#009380",
                    }
                  }
                >
                  E
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Edwina
              </span>
            </div>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Predovic
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Damaris_Wilderman@hotmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Devante"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#CB670B",
                    }
                  }
                >
                  D
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Devante
              </span>
            </div>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Schuppe
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Kris_Parker@hotmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
        >
          <div>
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                }
              }
            >
              <div
                data-css-79vgce=""
              >
                <div
                  aria-label="Skylar"
                  data-css-1xbr5gr=""
                  style={
                    Object {
                      "backgroundColor": "#CB670B",
                    }
                  }
                >
                  S
                </div>
              </div>
              <div
                style={
                  Object {
                    "display": "inline-block",
                    "width": "12px",
                  }
                }
              />
              <span>
                Skylar
              </span>
            </div>
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Greenholt
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Gust.Hodkiewicz@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Row Selection 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-1sa3un9=""
    role="grid"
  >
    <thead
      data-css-1decmr1=""
    >
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-1cfeqew=""
                >
                  <svg
                    aria-label="Indeterminate Mark"
                    data-css-ey6g07=""
                    role="img"
                    version="1.1"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="2"
                      width="10"
                      x="3"
                      y="7"
                    />
                  </svg>
                </div>
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-gx66zw=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Delphine
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Huel
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Forest_Lind@yahoo.com
        </td>
      </tr>
      <tr
        data-css-pf8cc5=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={true}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Checkmark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Brittany
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Hirthe
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Efrain_Gerhold71@gmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-gx66zw=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Geovany
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Franecki
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Nathanael.Wolff9@hotmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-gx66zw=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Ena
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Boyle
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Luna.Christiansen@gmail.com
        </td>
      </tr>
      <tr
        data-css-pf8cc5=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={true}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Checkmark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Emil
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Willms
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Lura_Pouros95@gmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-gx66zw=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Monique
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Reilly
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Rhoda_Botsford43@gmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-gx66zw=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Araceli
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Huels
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Hailey33@hotmail.com
        </td>
      </tr>
      <tr
        data-css-pf8cc5=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={true}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-1cfeqew=""
              >
                <svg
                  aria-label="Checkmark"
                  data-css-ey6g07=""
                  role="img"
                  version="1.1"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polygon
                    points="6.89667458 13 2.62114014 8.72446556 4.12826603 7.21733967 6.89667458 9.97505938 12.871734 4 14.3788599 5.51781473"
                  />
                </svg>
              </div>
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Nathan
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Becker
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Thad33@yahoo.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-gx66zw=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Maximillian
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          McKenzie
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Julius87@hotmail.com
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <label
            data-css-kn3wr0=""
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <div
              data-css-1ij5lym=""
            >
              <input
                checked={false}
                data-css-6wu9td=""
                readOnly={true}
                type="checkbox"
              />
              <div
                data-css-gx66zw=""
              />
            </div>
            <div
              data-css-ybwuvp=""
            />
          </label>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Brad
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Lang
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Flavio.Morar82@gmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table Sorting 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    aria-labelledby="test-caption-id"
    data-css-1sa3un9=""
    role="grid"
  >
    <caption
      aria-live="polite"
      id="test-caption-id"
    >
      <div
        data-css-6wu9td=""
      >
        Mock table title: Not sorted
      </div>
    </caption>
    <thead
      data-css-1decmr1=""
    >
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          aria-label="First name: No sort applied"
          aria-sort="none"
          data-css-1sqr5y4=""
          data-header-id="h-first-name"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="columnheader"
          scope="col"
          tabIndex={0}
          title="First name"
        >
          <div>
            First name
            <div
              aria-hidden={true}
              data-css-7dab2f=""
              data-css-yaqq33=""
            >
              <svg
                aria-label="sort icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
                />
              </svg>
            </div>
          </div>
        </th>
        <th
          aria-label="Last name: No sort applied"
          aria-sort="none"
          data-css-1sqr5y4=""
          data-header-id="h-last-name"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="columnheader"
          scope="col"
          tabIndex={0}
          title="Last name"
        >
          <div>
            Last name
            <div
              aria-hidden={true}
              data-css-7dab2f=""
              data-css-yaqq33=""
            >
              <svg
                aria-label="sort icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
                />
              </svg>
            </div>
          </div>
        </th>
        <th
          aria-label="Email: No sort applied"
          aria-sort="none"
          data-css-1sqr5y4=""
          data-header-id="h-email"
          onClick={[Function]}
          onKeyUp={[Function]}
          role="columnheader"
          scope="col"
          tabIndex={0}
          title="Email"
        >
          <div>
            Email
            <div
              aria-hidden={true}
              data-css-7dab2f=""
              data-css-yaqq33=""
            >
              <svg
                aria-label="sort icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M11.646 5.354a.5.5 0 01.708 0l4.292 4.292a.5.5 0 010 .708l-.703.703a.5.5 0 01-.707 0L12 7.83l-3.236 3.227a.5.5 0 01-.707 0l-.703-.703a.5.5 0 010-.708l4.292-4.292zm0 13.292l-4.292-4.292a.5.5 0 010-.708l.703-.703a.5.5 0 01.707 0L12 16.17l3.236-3.227a.5.5 0 01.707 0l.703.703a.5.5 0 010 .708l-4.292 4.292a.5.5 0 01-.708 0z"
                />
              </svg>
            </div>
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="rowheader"
          scope="row"
          title="First name"
        >
          <div>
            Era
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Dooley
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Schuyler_MacGyver50@hotmail.com
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table/drawer Left Indented 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-1sa3un9=""
    role="grid"
  >
    <thead
      data-css-1decmr1=""
    >
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        />
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Adolphus
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Donnelly
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Braulio_Rempel33@hotmail.com
        </td>
      </tr>
      <tr
        aria-hidden={true}
        data-css-e862eu=""
        data-css-glcvea=""
        role="row"
      >
        <td
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        />
        <td
          colSpan={3}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Krystal
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          MacGyver
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Kacey7@yahoo.com
        </td>
      </tr>
      <tr
        aria-hidden={false}
        data-css-glcvea=""
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        />
        <td
          colSpan={3}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Aglae
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Greenholt
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Vivianne.Johnson79@hotmail.com
        </td>
      </tr>
      <tr
        aria-hidden={true}
        data-css-e862eu=""
        data-css-glcvea=""
        role="row"
      >
        <td
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        />
        <td
          colSpan={3}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Vladimir
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          White
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Beaulah_Douglas@yahoo.com
        </td>
      </tr>
      <tr
        aria-hidden={true}
        data-css-e862eu=""
        data-css-glcvea=""
        role="row"
      >
        <td
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        />
        <td
          colSpan={3}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Hillard
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Bauch
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Michelle_OConnell58@hotmail.com
        </td>
      </tr>
      <tr
        aria-hidden={true}
        data-css-e862eu=""
        data-css-glcvea=""
        role="row"
      >
        <td
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        />
        <td
          colSpan={3}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table/drawer Right Not Indented 1`] = `
<div
  data-css-f3t1g9=""
>
  <table
    data-css-1sa3un9=""
    role="grid"
  >
    <thead
      data-css-1decmr1=""
    >
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            First name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Last name
          </div>
        </th>
        <th
          data-css-kj95yb=""
          role="columnheader"
          scope="col"
        >
          <div>
            Email
          </div>
        </th>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        />
      </tr>
    </thead>
    <tbody>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Darien
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Romaguera
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Kathryn91@gmail.com
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={true}
        data-css-e862eu=""
        data-css-glcvea=""
        role="row"
      >
        <td
          colSpan={4}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Libby
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Treutel
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Rogelio.Kuhic@hotmail.com
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret down icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={false}
        data-css-glcvea=""
        data-css-nr5oo2=""
        role="row"
      >
        <td
          colSpan={4}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Myrna
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Bernier
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Bridget23@yahoo.com
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={true}
        data-css-e862eu=""
        data-css-glcvea=""
        role="row"
      >
        <td
          colSpan={4}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Darrell
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Stamm
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Bruce_Bartell@gmail.com
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={true}
        data-css-e862eu=""
        data-css-glcvea=""
        role="row"
      >
        <td
          colSpan={4}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-css-nr5oo2=""
        role="row"
      >
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Damon
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Goyette
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          Luisa.Nader53@yahoo.com
        </td>
        <td
          data-css-nyp2vl=""
          role="gridcell"
        >
          <button
            data-css-66vnlm=""
            disabled={false}
            onClick={[Function]}
            title="Expand/Collapse additional content"
          >
            <div
              data-css-4ducb0=""
            >
              <div
                data-css-1gzzcm2=""
              >
                <svg
                  aria-label="caret right icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16 12l-5-5-1.41 1.41L13.17 12l-3.58 3.59L11 17"
                  />
                </svg>
              </div>
            </div>
            <span
              aria-hidden={false}
              data-css-15b13by=""
            />
          </button>
        </td>
      </tr>
      <tr
        aria-hidden={true}
        data-css-e862eu=""
        data-css-glcvea=""
        role="row"
      >
        <td
          colSpan={4}
          data-css-1hk2tgq=""
          data-css-nyp2vl=""
          role="gridcell"
        >
          <div
            data-css-16cxc22=""
          >
            <div
              style={
                Object {
                  "alignItems": "center",
                  "display": "flex",
                  "height": 100,
                  "justifyContent": "center",
                  "margin": 2,
                  "outline": "2px dashed pink",
                  "padding": 20,
                }
              }
            >
              Drawer Content
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Storyshots Components/Table/responsive Horizontal Scroll 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    data-css-62vpq9=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-1sa3un9=""
      role="grid"
    >
      <thead
        data-css-1decmr1=""
      >
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            <label
              data-css-kn3wr0=""
              onClick={[Function]}
              onKeyDown={[Function]}
            >
              <div
                data-css-1ij5lym=""
              >
                <input
                  data-css-6wu9td=""
                  readOnly={true}
                  type="checkbox"
                />
                <div
                  data-css-gx66zw=""
                />
              </div>
              <div
                data-css-ybwuvp=""
              />
            </label>
          </td>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="col"
            title="Full name"
          >
            <div>
              Full name
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="col"
            title="First name"
          >
            <div>
              First name
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="col"
            title="Last name"
          >
            <div>
              Last name
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="col"
            title="Email"
          >
            <div>
              Email
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Frederick
               
              Lindgren
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Frederick
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Lindgren
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Jaycee_Rice@yahoo.com
          </td>
        </tr>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Gerard
               
              Frami
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Gerard
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Frami
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Cicero_Hartmann90@gmail.com
          </td>
        </tr>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Virgie
               
              Satterfield
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Virgie
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Satterfield
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Ron54@hotmail.com
          </td>
        </tr>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Eino
               
              Homenick
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Eino
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Homenick
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Delta_Yost13@hotmail.com
          </td>
        </tr>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
            title="Full name"
          >
            <div>
              Luella
               
              Kirlin
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Luella
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Kirlin
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Addison_Bins@hotmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Components/Table/responsive Sticky Row Header 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
      "outline": "2px dashed pink",
      "padding": 20,
      "width": 500,
    }
  }
>
  <div
    data-css-62vpq9=""
    role="region"
    tabIndex={0}
  >
    <table
      data-css-1sa3un9=""
      role="grid"
    >
      <thead
        data-css-1decmr1=""
      >
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-g5xyh8=""
            role="columnheader"
            scope="row"
            style={
              Object {
                "width": 1,
              }
            }
            title="Selection"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
          >
            <div>
              Full name
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
          >
            <div>
              First name
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
          >
            <div>
              Last name
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="columnheader"
            scope="row"
          >
            <div>
              Email
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-g5xyh8=""
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="rowheader"
            scope="row"
          >
            <div>
              Otilia
               
              Collins
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Otilia
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Collins
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Seamus.Hettinger46@yahoo.com
          </td>
        </tr>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-g5xyh8=""
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="rowheader"
            scope="row"
          >
            <div>
              Baby
               
              Mayert
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Baby
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Mayert
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Karianne24@yahoo.com
          </td>
        </tr>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-g5xyh8=""
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="rowheader"
            scope="row"
          >
            <div>
              Aisha
               
              VonRueden
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Aisha
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            VonRueden
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Mitchel.Parker@gmail.com
          </td>
        </tr>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-g5xyh8=""
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="rowheader"
            scope="row"
          >
            <div>
              Lynn
               
              Runolfsdottir
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Lynn
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Runolfsdottir
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Vivienne.Jenkins@hotmail.com
          </td>
        </tr>
        <tr
          data-css-nr5oo2=""
          role="row"
        >
          <th
            data-css-g5xyh8=""
            role="rowheader"
            scope="row"
          >
            <div>
              <label
                data-css-kn3wr0=""
                onClick={[Function]}
                onKeyDown={[Function]}
              >
                <div
                  data-css-1ij5lym=""
                >
                  <input
                    data-css-6wu9td=""
                    readOnly={true}
                    type="checkbox"
                  />
                  <div
                    data-css-gx66zw=""
                  />
                </div>
                <div
                  data-css-ybwuvp=""
                />
              </label>
            </div>
          </th>
          <th
            data-css-kj95yb=""
            role="rowheader"
            scope="row"
          >
            <div>
              Viva
               
              Sipes
            </div>
          </th>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Viva
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Sipes
          </td>
          <td
            data-css-nyp2vl=""
            role="gridcell"
          >
            Haven2@hotmail.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
